2008-07-24 [Version 1.2.6-rc1 released]

       * Add support for newer automake (Facebook)

       * DTrace support for Solaris/etc (Trond Norbye)

       * LRU tests (Steve Yen)

       * Handle negative length items properly (Dormando)

       * Don't leave stale data after failed set attempts (Dormando)

       * Fix refcount leaks, which would result in OOM's on all sets
	       (Dormando)

       * Fix buffer overruns (Dustin Sallings, Tomash Brechko)

       * Fix memory corruption with CAS (Dustin Sallings)

2008-06-11

       * Fix -k to work with -d. (reported by Gary Zhu)

2008-03-02 [Version 1.2.5-rc1 released]

       * Add per-item-class tracking of evictions and OOM errors (dormando)

       * Optimize item_alloc() a little (dormando)

       * Give 'SERVER_ERROR out of memory' errors more context (dormando)

       * Enable usage of large memory pages under solaris
         (Trond.Norbye@Sun.COM)

       * Enable UDP by default, clean up server socket code
         (brian@tangent.org)

       * 'noreply' support (Tomash Brechko)

       * IPv6 support, and IPv6 multi-interface support (brian@tangent.org)

       * Add compiler options for Sun Studio compilers with --enable-threads
	     (Trond.Norbye@Sun.COM)

       * Add --enable-64bit for mulitarget platforms (Trond.Norbye@Sun.COM)

       * Use gettimeofday(2) instead of time(2).

       * Make -k option work (Tomash Brechko)

	   * Fix chunk slab alignment (Trond.Norbye@Sun.COM)

2007-12-06 [Version 1.2.4 released]

2007-12-05

       * Fix compilation on panther (JS and Dormando)

	   * More CAS tests (Chris Goffinet)

	   * Final fixes for all 1.2.4 features are in, -rc2 sent out.

2007-11-19 [Version 1.2.4-rc1 released]

2007-11-19  Dormando <dormando@rydia.net>

       * Patch series from Tomash Brechko <tomash.brechko@gmail.com>:
         Minor fixes and optimisations.

       * Patches from Chris, Dustin, and Dormando to fix CAS.

       * Prepping for 1.2.4 release.
